# async-python-sprint-2

./: .gitignore  FOR_REVIEWER.md  pyproject.toml
src/: backup_example.json  config.py  exceptions.py  job.py  main.py  scheduler.py  task_examples.py  utils.py
src/core/: __init__.py  task_examples.py  utils.py
src/examples/: tasks.py
